--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
+                <version>3.0.1</version>
                 <configuration>
                     <archive>
                         <manifest>
@@ -50,7 +51,7 @@
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>1.2.1</version>
                 <configuration>
-                    <mainClass>App</mainClass>
+                    <mainClass>com.github.jacopofar.fleximatcherwebinterface.Fwi</mainClass>
                 </configuration>
             </plugin>
 
